Updated readme and fixed typos
