# docs/swagger.json
@@ -98,7 +98,7 @@
                 }
             }
         },
-        "/api/get": {
+        "/api/balance": {
             "get": {
                 "consumes": [
                     "application/json"
@@ -342,7 +342,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/entities.ReportRequest"
+                            "$ref": "#/definitions/entities.UserReportRequest"
                         }
                     }
                 ],
@@ -350,7 +350,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/entities.ResultResponse"
+                            "$ref": "#/definitions/entities.UserReport"
                         }
                     },
                     "400": {
@@ -449,6 +449,85 @@
             "type": "object",
             "properties": {
                 "id": {
+                    "type": "integer"
+                }
+            }
+        },
+        "entities.UserReport": {
+            "type": "object",
+            "properties": {
+                "reserves": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/entities.UserReserving"
+                    }
+                },
+                "transactions": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/entities.UserTransactionReport"
+                    }
+                },
+                "transfers": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/entities.UserTransferReport"
+                    }
+                }
+            }
+        },
+        "entities.UserReportRequest": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
+                }
+            }
+        },
+        "entities.UserReserving": {
+            "type": "object",
+            "properties": {
+                "amount": {
+                    "type": "number"
+                },
+                "order_id": {
+                    "type": "integer"
+                },
+                "service_id": {
+                    "type": "integer"
+                }
+            }
+        },
+        "entities.UserTransactionReport": {
+            "type": "object",
+            "properties": {
+                "amount": {
+                    "type": "number"
+                },
+                "date": {
+                    "type": "string"
+                },
+                "order_id": {
+                    "type": "integer"
+                },
+                "service_id": {
+                    "type": "integer"
+                }
+            }
+        },
+        "entities.UserTransferReport": {
+            "type": "object",
+            "properties": {
+                "amount": {
+                    "type": "number"
+                },
+                "date": {
+                    "type": "string"
+                },
+                "dest_id": {
+                    "type": "integer"
+                },
+                "src_id": {
                     "type": "integer"
                 }
             }
